<resources>
    <string name="app_name">ILoveZappos</string>
    <string name="zappos">Zappos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- error -->
    <string name="error_msg">Sorry! Could not load items.</string>
    <string name="btn_retry">Retry</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="error_msg_no_data">No results for this search</string>
    <string name="tap_to_reload">Tap to reload</string>

    <!-- common -->
    <string name="device_type">phone</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="item_added_to_cart">Item added to cart</string>
    <string name="item_saved_to_liked_list">Item saved to liked list</string>
    <string name="item_removed_from_liked_list">Item removed from liked list</string>
    <string name="search_hint">Search clothes, shoes..</string>
    <string name="key_missing_msg">Please obtain your API KEY from zappos.com first!</string>

    <!-- menu -->
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="view_as">View As</string>
    <string name="large">Large</string>
    <string name="grid">Grid</string>

    <!-- navigation bar -->
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="kids">Kids</string>
    <string name="sports">Sports</string>
    <string name="home">Home</string>
    <string name="accessories">Accessories</string>
    <string name="brands">Brands</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>

    <!-- product page -->
    <string name="heading_product_detail">Product Details</string>
    <string name="heading_delivery_options">Delivery Options</string>
    <string name="heading_size">Select Size</string>
    <string name="heading_product_info">Product Info</string>
    <string name="heading_product_colors">Colors (Styles)</string>
    <string name="heading_product_recommend">Similar Recommended products</string>

</resources>
