<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_home"
            android:checked="true"
            android:icon="@drawable/ic_nav_menu_men"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_menu_women"
            android:icon="@drawable/ic_nav_menu_men"
            android:title="@string/women" />
        <item
            android:id="@+id/nav_menu_men"
            android:icon="@drawable/ic_nav_menu_men"
            android:title="@string/men" />

        <item
            android:id="@+id/nav_menu_kids"
            android:icon="@drawable/ic_nav_menu_men"
            android:title="@string/kids" />

        <item
            android:id="@+id/nav_menu_accessories"
            android:icon="@drawable/ic_nav_menu_men"
            android:title="@string/accessories" />

        <item
            android:id="@+id/nav_menu_sports"
            android:icon="@drawable/ic_nav_menu_men"
            android:title="@string/sports" />

        <item
            android:id="@+id/nav_menu_brands"
            android:icon="@drawable/ic_nav_menu_men"
            android:title="@string/brands" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_nav_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_nav_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
